<resources>
    <string name="app_name">liubiljett</string>
    <string name="title_activity_test">test</string>
    <string name="title_feed">Alla inlägg</string>
    <string name="title_post">Nytt inlägg</string>
    <string name="title_profile">Profil</string>
    <string name="title_liked">Gillade inlägg</string>
    <string name="title_loggedin" >Inloggad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Namn</string>
    <string name="email">Email</string>
    <string name="telephone">Telefonnummer</string>
    <string name="password">Lösenord</string>
    <string name="confirm_password">Bekräfta lösenord</string>
    <string name="logo">logo</string>
    <string name="create_account">Skapa</string>
    <string name="take_picture">Ta bild</string>
    <string name="headline">Rubrik</string>
    <string name="publish">Publicera</string>
    <string name="ad_photo">ad_photo</string>
    <string name="description">Övrigt</string>
    <string name="price">Pris</string>
    <string name="linear_layout_manager">linearlayoutman</string>
    <string name="grid_layout_manager">gridlayoutman</string>
    <string name="postimage">postImage</string>
    <string name="likeButton">likeButton</string>
    <string name="logga_in">Logga in</string>
    <string name="gilla">Gilla</string>
    <string name="register">Inget konto? Registrera dig här!</string>
    <string name="mina_poster">Mina poster</string>
    <string name="following">Följer</string>
    <string name="showAll">Visar alla poster</string>
    <string name="showFollowing">Visar endast de du följer</string>
    <string name="comment">Kommentera</string>
    <string name="follow">Följ</string>
    <string name="publicera">Publicera</string>
    <string name="skapat_av">Skapat av:</string>


    <!-- TODO: Remove or change this placeholder text -->

</resources>
