<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.liubiljett.ui.MainPageFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.liubiljett.ui.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.liubiljett.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_liked"
        android:name="com.example.liubiljett.ui.LikedFragment"
        android:label="@string/title_liked"
        tools:layout="@layout/fragment_liked" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.liubiljett.ui.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>
