<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.LogInFragment">

    <FrameLayout
        android:id="@+id/frame_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_light_background">

        <Button
            android:id="@+id/login_button"
            android:layout_width="104dp"
            android:layout_height="61dp"
            android:layout_marginTop="330dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:text="@string/logga_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="123dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="82dp"
            android:text="@string/register"
            android:textSize="12sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="100dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="101dp"
            android:layout_marginBottom="127dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="101dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="101dp"
            android:layout_marginBottom="194dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>